@@ -42,6 +42,21 @@ namespace pdscalibdata {
 //----------------
 CalibParsCenterV1::CalibParsCenterV1 ()
 {
+  double arr_x[] = {198.,  198.,  310.,   98.,  627.,  628.,  711.,  498.,
+                    198.,  198.,  310.,   98.,  627.,  628.,  711.,  498.,
+                    198.,  198.,  310.,   98.,  627.,  628.,  711.,  498.,
+		    198.,  198.,  310.,   98.,  627.,  628.,  711.,  498.};
+
+  double arr_y[] = {307.,   95.,  625.,  625.,  515.,  727.,  198.,  199.,
+                    307.,   95.,  625.,  625.,  515.,  727.,  198.,  199.,
+                    307.,   95.,  625.,  625.,  515.,  727.,  198.,  199.,
+                    307.,   95.,  625.,  625.,  515.,  727.,  198.,  199.};
+ 
+  int NPars = NQuad * NSect;
+  size_t  arr_size = sizeof( double ) * NPars;
+  memcpy     ( &m_center_x[0][0], arr_x, arr_size);
+  memcpy     ( &m_center_y[0][0], arr_y, arr_size);
+  std::fill_n( &m_center_z[0][0], NPars, double(0));
 }
 
 //----------------
